// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserGroupsTab should match a snapshot where there is data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          SOME_NAME
           User Groups
        </h1>
      </div>
      <div
        class="el-fade-in el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="3"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Group Name
          </div>
          <div
            class="el-table-header"
          >
            Description
          </div>
          <div
            class="el-table-header"
          >
            Member Count
          </div>
          <div
            class="el-table-header"
          >
            <span
              class="el-icon"
              style="font-size: 1.2rem;"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Group Name"
              >
                MarketplaceAdmin
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Description"
              >
                Users who can administer the Reapit Marketplace for an organisation or organisation office group
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Member Count"
              >
                4
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <form
                class="el-p8"
              >
                <h2
                  class="el-subtitle"
                >
                  Edit User Group
                </h2>
                <p
                  class="el-has-grey-text el-has-section-margin el-body-text"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </p>
                <div
                  class="el-form-layout-has-margin el-fade-in el-form-layout"
                >
                  <div
                    class="el-input-wrap-full"
                  >
                    <div
                      class="el-input-group"
                    >
                      <input
                        class="el-input"
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <span
                        class="el-icon"
                      >
                        <svg />
                      </span>
                      <label
                        class="el-label"
                        for="test-static-id"
                      >
                        Users
                      </label>
                    </div>
                    <div
                      class="el-multi-select-input-wrapper"
                    >
                      <input
                        class="el-multi-select-input"
                        id="user-groups-ids-MarketplaceAdmin"
                        name="userIds"
                      />
                      <div
                        class="el-multi-select-selected"
                      >
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-right el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                      type="button"
                    >
                      Cancel
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      Submit
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Group Name"
              >
                OrganisationAdmin
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Description"
              >
                Users who can administer an organisation
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Member Count"
              >
                1
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <form
                class="el-p8"
              >
                <h2
                  class="el-subtitle"
                >
                  Edit User Group
                </h2>
                <p
                  class="el-has-grey-text el-has-section-margin el-body-text"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </p>
                <div
                  class="el-form-layout-has-margin el-fade-in el-form-layout"
                >
                  <div
                    class="el-input-wrap-full"
                  >
                    <div
                      class="el-input-group"
                    >
                      <input
                        class="el-input"
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <span
                        class="el-icon"
                      >
                        <svg />
                      </span>
                      <label
                        class="el-label"
                        for="test-static-id"
                      >
                        Users
                      </label>
                    </div>
                    <div
                      class="el-multi-select-input-wrapper"
                    >
                      <input
                        class="el-multi-select-input"
                        id="user-groups-ids-OrganisationAdmin"
                        name="userIds"
                      />
                      <div
                        class="el-multi-select-selected"
                      >
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-right el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                      type="button"
                    >
                      Cancel
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      Submit
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Group Name"
              >
                ReapitUserAdmin
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Description"
              >
                Users who are Reapit customers who can perform admin Foundations actions
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Member Count"
              >
                3
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <form
                class="el-p8"
              >
                <h2
                  class="el-subtitle"
                >
                  Edit User Group
                </h2>
                <p
                  class="el-has-grey-text el-has-section-margin el-body-text"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </p>
                <div
                  class="el-form-layout-has-margin el-fade-in el-form-layout"
                >
                  <div
                    class="el-input-wrap-full"
                  >
                    <div
                      class="el-input-group"
                    >
                      <input
                        class="el-input"
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <span
                        class="el-icon"
                      >
                        <svg />
                      </span>
                      <label
                        class="el-label"
                        for="test-static-id"
                      >
                        Users
                      </label>
                    </div>
                    <div
                      class="el-multi-select-input-wrapper"
                    >
                      <input
                        class="el-multi-select-input"
                        id="user-groups-ids-ReapitUserAdmin"
                        name="userIds"
                      />
                      <div
                        class="el-multi-select-selected"
                      >
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                        <input
                          checked=""
                          class="el-multi-select-checkbox"
                          id="test-static-id"
                          type="checkbox"
                        />
                        <label
                          class="el-multi-select-label"
                          for="test-static-id"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-right el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                      type="button"
                    >
                      Cancel
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      Submit
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <h1
        class="el-title"
      >
        SOME_NAME
         User Groups
      </h1>
    </div>
    <div
      class="el-fade-in el-mb11 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="3"
    >
      <div
        class="el-table-headers-row"
      >
        <div
          class="el-table-header"
        >
          Group Name
        </div>
        <div
          class="el-table-header"
        >
          Description
        </div>
        <div
          class="el-table-header"
        >
          Member Count
        </div>
        <div
          class="el-table-header"
        >
          <span
            class="el-icon"
            style="font-size: 1.2rem;"
          >
            <svg />
          </span>
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Group Name"
            >
              MarketplaceAdmin
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Description"
            >
              Users who can administer the Reapit Marketplace for an organisation or organisation office group
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Member Count"
            >
              4
            </div>
          </div>
          <div
            class="el-table-expandable-row-trigger-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-expandable-row"
        >
          <div
            class="el-table-expandable-container"
          >
            <form
              class="el-p8"
            >
              <h2
                class="el-subtitle"
              >
                Edit User Group
              </h2>
              <p
                class="el-has-grey-text el-has-section-margin el-body-text"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </p>
              <div
                class="el-form-layout-has-margin el-fade-in el-form-layout"
              >
                <div
                  class="el-input-wrap-full"
                >
                  <div
                    class="el-input-group"
                  >
                    <input
                      class="el-input"
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                    <label
                      class="el-label"
                      for="test-static-id"
                    >
                      Users
                    </label>
                  </div>
                  <div
                    class="el-multi-select-input-wrapper"
                  >
                    <input
                      class="el-multi-select-input"
                      id="user-groups-ids-MarketplaceAdmin"
                      name="userIds"
                    />
                    <div
                      class="el-multi-select-selected"
                    >
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-secondary el-button"
                    type="button"
                  >
                    Cancel
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    Submit
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Group Name"
            >
              OrganisationAdmin
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Description"
            >
              Users who can administer an organisation
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Member Count"
            >
              1
            </div>
          </div>
          <div
            class="el-table-expandable-row-trigger-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-expandable-row"
        >
          <div
            class="el-table-expandable-container"
          >
            <form
              class="el-p8"
            >
              <h2
                class="el-subtitle"
              >
                Edit User Group
              </h2>
              <p
                class="el-has-grey-text el-has-section-margin el-body-text"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </p>
              <div
                class="el-form-layout-has-margin el-fade-in el-form-layout"
              >
                <div
                  class="el-input-wrap-full"
                >
                  <div
                    class="el-input-group"
                  >
                    <input
                      class="el-input"
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                    <label
                      class="el-label"
                      for="test-static-id"
                    >
                      Users
                    </label>
                  </div>
                  <div
                    class="el-multi-select-input-wrapper"
                  >
                    <input
                      class="el-multi-select-input"
                      id="user-groups-ids-OrganisationAdmin"
                      name="userIds"
                    />
                    <div
                      class="el-multi-select-selected"
                    >
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-secondary el-button"
                    type="button"
                  >
                    Cancel
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    Submit
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Group Name"
            >
              ReapitUserAdmin
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Description"
            >
              Users who are Reapit customers who can perform admin Foundations actions
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Member Count"
            >
              3
            </div>
          </div>
          <div
            class="el-table-expandable-row-trigger-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-expandable-row"
        >
          <div
            class="el-table-expandable-container"
          >
            <form
              class="el-p8"
            >
              <h2
                class="el-subtitle"
              >
                Edit User Group
              </h2>
              <p
                class="el-has-grey-text el-has-section-margin el-body-text"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </p>
              <div
                class="el-form-layout-has-margin el-fade-in el-form-layout"
              >
                <div
                  class="el-input-wrap-full"
                >
                  <div
                    class="el-input-group"
                  >
                    <input
                      class="el-input"
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <span
                      class="el-icon"
                    >
                      <svg />
                    </span>
                    <label
                      class="el-label"
                      for="test-static-id"
                    >
                      Users
                    </label>
                  </div>
                  <div
                    class="el-multi-select-input-wrapper"
                  >
                    <input
                      class="el-multi-select-input"
                      id="user-groups-ids-ReapitUserAdmin"
                      name="userIds"
                    />
                    <div
                      class="el-multi-select-selected"
                    >
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                      <input
                        checked=""
                        class="el-multi-select-checkbox"
                        id="test-static-id"
                        type="checkbox"
                      />
                      <label
                        class="el-multi-select-label"
                        for="test-static-id"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-secondary el-button"
                    type="button"
                  >
                    Cancel
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    Submit
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-pagination-wrap"
    >
      <div
        class="el-pagination-text"
      >
        <input
          class="el-pagination-input"
          value="1"
        />
         of 
        1
      </div>
      <button
        class="el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </button>
      <button
        class="el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserGroupsTab should match a snapshot where there is data but no user groups 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          SOME_NAME
           User Groups
        </h1>
      </div>
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No users found
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <h1
        class="el-title"
      >
        SOME_NAME
         User Groups
      </h1>
    </div>
    <div
      class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-pn-content"
      >
        No users found
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserGroupsTab should match a snapshot where there is no orgId 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          User Groups
        </h1>
      </div>
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No organisation selected. You need to select an organisation to view user groups.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <h1
        class="el-title"
      >
        User Groups
      </h1>
    </div>
    <div
      class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-pn-content"
      >
        No organisation selected. You need to select an organisation to view user groups.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
